# c-practice

./: .gitignore  CMakeLists.txt  README.md  build.sh
_archive/: Notes.md
characters/: charsv1.c  charsv2.c  charsv3.c  main.c  mainv1.c  v4lib.c  v4lib.h
fn_pointers/: fn_pointers.c
headers/: Makefile  greeting.c  greeting.h
include/: player.h
src/characters/: charsv1.c  charsv4.c
src/headers/: say_hello.c
src/nba/: nba_sim.c  player.c
